--- a/spring-boot/boot-mybatis/pom.xml
+++ b/spring-boot/boot-mybatis/pom.xml
@@ -15,8 +15,9 @@
     <version>1.0.0</version>
 
     <properties>
-       <mysql-version>8.0.16</mysql-version>
+        <mysql-version>5.1.39</mysql-version>
         <mybatis-spring-boot-version>2.1.0</mybatis-spring-boot-version>
+        <druid-version>1.1.8</druid-version>
     </properties>
 
     <dependencies>
@@ -39,6 +40,13 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql-version}</version>
+        </dependency>
+
+        <!-- druid -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid-version}</version>
         </dependency>
 
         <!-- Spring Boot Test 依赖-->
