spring原生配置web环境

--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <!-- Spring Boot 整合 Mybatis -->
         <module>boot-mybatis</module>
+        <module>boot-spring</module>
 
     </modules>
 
