Spring Boot环境下为容器导入Servlet组件

--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -17,6 +17,7 @@
         <!-- Spring Boot 整合 Mybatis -->
         <module>boot-mybatis</module>
         <module>boot-spring</module>
+        <module>boot-servlet</module>
 
     </modules>
 
