--- a/zookeeper/pom.xml
+++ b/zookeeper/pom.xml
@@ -11,7 +11,44 @@
 
     <groupId>com.code.zk</groupId>
     <artifactId>zookeeper</artifactId>
+    <packaging>pom</packaging>
     <version>1.0.0</version>
+
+    <modules>
+
+        <!-- 使用zk实现配置中心 -->
+        <module>configuration-center</module>
+
+    </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <!-- zkclient客户端 -->
+            <dependency>
+                <groupId>com.101tec</groupId>
+                <artifactId>zkclient</artifactId>
+                <version>0.10</version>
+            </dependency>
+            <!-- curator客户端 -->
+            <dependency>
+                <groupId>org.apache.curator</groupId>
+                <artifactId>curator-client</artifactId>
+                <version>2.12.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.curator</groupId>
+                <artifactId>curator-recipes</artifactId>
+                <version>2.10.0</version>
+            </dependency>
+            <!-- 阿里转换工具 -->
+            <dependency>
+                <groupId>com.alibaba.toolkit</groupId>
+                <artifactId>toolkit-common-convert</artifactId>
+                <version>1.0</version>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
 
 
 </project>
